--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,6 @@
 
 .hamburger-nav{padding: 1rem;
 border: 0.5px solid white ;}
+
+
+.my-form{border-top: 0;border-left: 0;border-right: 0; border-radius: 0;}
