--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,5 @@ border: 0.5px solid white ;}
 
 
 .my-form{border-top: 0;border-left: 0;border-right: 0; border-radius: 0;}
+
+.mybtn{background-color: #1abc9c;border: none;}
