--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,9 @@
     --bs-dark-rgb: 44,62,80;
 }
 
-.hamburger-nav{padding: 1rem;
-border: 0.5px solid white ;}
+.hamburger-nav{color: gray; padding: 0.6rem;
+border: 0.5px solid white ;
+background-color: transparent;}
 
 
 .my-form{border-top: 0;border-left: 0;border-right: 0; border-radius: 0;}
